build/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: K8S_PROJECT_NAME-nodejs-deployment
  namespace: K8S_NAMESPACE
  labels:
    name: K8S_PROJECT_NAME-nodejs
spec:
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      name: K8S_PROJECT_NAME-nodejs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: K8S_PROJECT_NAME-nodejs
    spec:
      containers:
        - name: socket-proxy-nodejs
          image: registry.gitlab.com/robots-miniapp/logux-proxy/logux-proxy:nodejs-14_K8S_IMAGE_TAG
          imagePullPolicy: Always
          resources:
            limits:
              memory: "200Mi"
              cpu: "250m"
            requests:
              memory: "200Mi"
              cpu: "250m"
          ports:
            - name: http
              containerPort: 31337
              protocol: TCP
