build/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: K8S_PROJECT_NAME-nodejs
  namespace: K8S_NAMESPACE
spec:
  ports:
  - port: 31337
    targetPort: 31337
  selector:
    name: K8S_PROJECT_NAME-nodejs
